# SwampFindr

./: .gitignore  README.md
.github/workflows/: actions.yml
Pinecone/: PineconeAPI.py
backend/: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  run.py  test_mongo.py
backend/agentTest/: __init__.py  test.py
backend/app/: __init__.py  auth.py  config.py  extensions.py
backend/app/agents/: __init__.py  agent.py  gnv-bus-stops.csv  prompts.py  tools.py  user_context.py
backend/app/database/: __init__.py  mongo.py
backend/app/models/: __init__.py  conversation.py  models.py  profile.py  search_history.py
backend/app/routes/: __init__.py  agent.py  api.py  emailing.py  pinecone-api.py  profiles.py  recommendations.py  search.py  vectordb.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  conversation_service.py  gmail_service.py  listing_utils.py  pinecone_service.py  profile_service.py  recommendation_service.py  search_service.py
backend/app/utils/: __init__.py  geo.py  pydantic_to_restx.py
backend/models/: __init__.py  models.py
backend/scripts/: add_email_to_listings.py  agent_performance.py  embed_listings.py  helpers.py  img_enhance.py  investigate.ipynb  listings.py  pipeline.py
backend/tests/: agent_tools_test.py  test_agent_traceability.py  test_api.py  test_gmail_service.py  test_pinecone_service.py  test_tools.py
swampfindr/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json
swampfindr/src/: middleware.ts
swampfindr/src/app/: globals.css  layout.tsx  page.tsx
swampfindr/src/app/(main)/: layout.tsx
swampfindr/src/app/auth/: actions.ts  layout.tsx
swampfindr/src/app/dashboard/: page.tsx
swampfindr/src/app/onboarding/: OnboardingForm.tsx  (+1 more)
swampfindr/src/data/: auth.ts  branding.ts  dashboard.ts  errors.ts  index.ts  landing.ts  navigation.ts  onboarding.ts  settings.ts  validation.ts
swampfindr/src/hooks/: useChat.ts  useProfile.ts  useSearch.ts
swampfindr/src/types/: chat.ts  listing.ts  profile.ts  search.ts
swampfindr/supabase/migrations/: 00001_create_profiles.sql
(+83 files in other folders)
