[project]
name = "backend"
version = "0.1.0"
description = "SwampFindr Backend REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-restx>=1.3.0",
    "flask-cors>=4.0.0",
    "flask-limiter>=3.5.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pytest>=7.4.0",
    "pytest-flask>=1.3.0",
    "pymongo>=4.12,<4.16",
    "pydantic>=2.12.5",
    "langchain>=1.2.10",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=1.0.1",
    "pinecone>=5.0.0",
    "certifi>=2026.1.4",
    "PyJWT[crypto]>=2.8.0",
    "langchain-community>=0.4.1",
    "langgraph-checkpoint-mongodb>=0.3.1",
    "gunicorn>=21.2.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
enhance = [
    "diffusers>=0.30.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
